--- a/mapPage.html
+++ b/mapPage.html
@@ -29,7 +29,7 @@
     </div>
 
     <ul>
-        <li><a href="mapPage.html">Return of the Bouyachaka Page></a></li>
+        <li><a href="index.php">Return of the Bouyachaka Page</a></li>
     </ul>
 
     </body>
