--- a/mapPage.html
+++ b/mapPage.html
@@ -13,8 +13,35 @@
                         zoom: 13,
                         mapTypeId:'roadmap'
                         });
+                downloadUrl("index.php",function(data)
+                {
+                    var xml = data.responseXML;
+                    var markers = xml.documentElement.getElementsByTagName("marker");
+                    for(var i=0; i<markers.length;i++){
+                        var point = new google.maps.LatLng(
+                                parseFloat(markers[i].getAtribute("lat")),
+                                parseFloat(markers[i].getAtribute("lat")));
+                        var marker = new.google.maps.Marker({
+                            map: map,
+                            position: point
+                        });
+                    }
+                });
 
             }
+            function downloadUrl(url,callback){
+                var request = window.ActiveXObject ?
+                    new ActiveXObject('Microsoft.XMLHTTP'):
+                    new XMLHttpRequest;
+                request.onreadystatechange = function(){
+                    if(request.readyState == 4){
+                        callback(request0, request.status);
+                    }
+                };
+                request.open('GET', url, true);
+                request.send(null);
+            }
+
         </script>
 
     </head>
