Import Map Page and locations on the map page

--- a/mapPage.html
+++ b/mapPage.html
@@ -21,7 +21,7 @@
                         var point = new google.maps.LatLng(
                                 parseFloat(markers[i].getAtribute("lat")),
                                 parseFloat(markers[i].getAtribute("lat")));
-                        var marker = new.google.maps.Marker({
+                        var marker = new google.maps.Marker({
                             map: map,
                             position: point
                         });
