--- a/mapPage.html
+++ b/mapPage.html
@@ -9,7 +9,7 @@
         <script type="text/Javascript">
             function load(){
                 var map = new google.maps.Map(document.getElementById("map"),
-                        {center: new google.maps.LatLng(-54.8044, -68.3040),
+                        {center: new google.maps.LatLng(47.6145, -122.3418),
                         zoom: 13,
                         mapTypeId:'roadmap'
                         });
@@ -20,7 +20,7 @@
                     for(var i=0; i<markers.length;i++){
                         var point = new google.maps.LatLng(
                                 parseFloat(markers[i].getAtribute("lat")),
-                                parseFloat(markers[i].getAtribute("lat")));
+                                parseFloat(markers[i].getAtribute("lng")));
                         var marker = new google.maps.Marker({
                             map: map,
                             position: point
@@ -31,11 +31,11 @@
             }
             function downloadUrl(url,callback){
                 var request = window.ActiveXObject ?
-                    new ActiveXObject('Microsoft.XMLHTTP'):
+                    new ActiveXObject('Microsoft.XMLHTTP') :
                     new XMLHttpRequest;
                 request.onreadystatechange = function(){
                     if(request.readyState == 4){
-                        callback(request0, request.status);
+                        callback(request, request.status);
                     }
                 };
                 request.open('GET', url, true);
