--- a/mapPage.html
+++ b/mapPage.html
@@ -19,8 +19,8 @@
                     var markers = xml.documentElement.getElementsByTagName("marker");
                     for(var i=0; i<markers.length;i++){
                         var point = new google.maps.LatLng(
-                                parseFloat(markers[i].getAtribute("lat")),
-                                parseFloat(markers[i].getAtribute("lng")));
+                                parseFloat(markers[i].getAttribute("lat")),
+                                parseFloat(markers[i].getAttribute("lng")));
                         var marker = new google.maps.Marker({
                             map: map,
                             position: point
