--- a/mapPage.html
+++ b/mapPage.html
@@ -1,62 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>PHP/MYSQL & Google Maps Example</title>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf7897Vvv1qEQidZdzbF9zq_lfadpnlJc"
-                type="text/JavaScript"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>PHP/MYSQL & Google Maps Example</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf7897Vvv1qEQidZdzbF9zq_lfadpnlJc"
+            type="text/JavaScript"></script>
 
-        <script type="text/Javascript">
-            function load(){
-                var map = new google.maps.Map(document.getElementById("map"),
-                        {center: new google.maps.LatLng(47.6145, -122.3418),
-                        zoom: 13,
-                        mapTypeId:'roadmap'
-                        });
-                downloadUrl("index.php",function(data)
-                {
-                    var xml = data.responseXML;
-                    var markers = xml.documentElement.getElementsByTagName("marker");
-                    for(var i=0; i<markers.length;i++){
-                        var point = new google.maps.LatLng(
-                                parseFloat(markers[i].getAttribute("lat")),
-                                parseFloat(markers[i].getAttribute("lng")));
-                        var marker = new google.maps.Marker({
-                            map: map,
-                            position: point
-                        });
-                    }
-                });
+    <script type="text/Javascript">
+        var customIcons = {
+            restaurant: {
+                icon: 'http://labs.google.com/ridefinder/images/mm_20_blue.png'
+            },
+            bar: {
+                icon: 'http://labs.google.com/ridefinder/images/mm_20_red.png'
             }
-            function downloadUrl(url,callback){
-                var request = window.ActiveXObject ?
+        };
+        function load() {
+            var map = new google.maps.Map(document.getElementById("map"), {
+                center: new google.maps.LatLng(47.6145, -122.3418),
+                zoom: 13,
+                mapTypeId: 'roadmap'
+            });
+            downloadUrl("index.php", function(data) {
+                var xml = data.responseXML;
+                var markers = xml.documentElement.getElementsByTagName("marker");
+                for (var i = 0; i < markers.length; i++) {
+                    var point = new google.maps.LatLng(
+                            parseFloat(markers[i].getAttribute("lat")),
+                            parseFloat(markers[i].getAttribute("lng")));
+                    var type = markers[i].getAttribute("type");
+                    var icon = customIcons[type] || {};
+                    var marker = new google.maps.Marker({
+                        map: map,
+                        position: point,
+                        icon: icon.icon
+                    });
+                }
+            });
+
+        }
+        function downloadUrl(url,callback) {
+            var request = window.ActiveXObject ?
                     new ActiveXObject('Microsoft.XMLHTTP') :
                     new XMLHttpRequest;
-                request.onreadystatechange = function(){
-                    if(request.readyState == 4){
-                        callback(request, request.status);
-                    }
-                };
-                request.open('GET', url, true);
-                request.send(null);
-            }
 
-        </script>
+            request.onreadystatechange = function() {
+                if (request.readyState == 4) {
+                    callback(request, request.status);
+                }
+            };
 
-    </head>
-    <body onload="load()">
-        <br><h1>Map Page of Bouyachaka</h1><br>
-        <?php
+            request.open('GET', url, true);
+            request.send(null);
+        }
+
+
+    </script>
+
+</head>
+<body onload="load()">
+<br><h1>Map Page of Bouyachaka</h1><br>
+<?php
             print "Bouyachaka";
         ?>
 
-    <div id="map" style="width: 500px; height: 300px">
+<div id="map" style="width: 500px; height: 300px">
 
-    </div>
+</div>
 
-    <ul>
-        <li><a href="index.php">Return of the Bouyachaka Page</a></li>
-    </ul>
+<ul>
+    <li><a href="index.php">Return of the Bouyachaka Page</a></li>
+</ul>
 
-    </body>
+</body>
 </html>
