Import Map Page and locations on the map page

--- a/mapPage.html
+++ b/mapPage.html
@@ -5,7 +5,9 @@
     <title>PHP/MYSQL & Google Maps Example</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf7897Vvv1qEQidZdzbF9zq_lfadpnlJc"
             type="text/JavaScript">
-     customIcons = {
+
+    <script; type="text/Javascript">;
+        var customIcons = {
             restaurant: {
                 icon: 'http://labs.google.com/ridefinder/images/mm_20_blue.png'
             },
