--- a/mapPage.html
+++ b/mapPage.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>PHP/MYSQL & Google Maps Example</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf7897Vvv1qEQidZdzbF9zq_lfadpnlJc"
-            type="text/JavaScript">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf7897Vvv1qEQidZdzbF9zq_lfadpnlJc"></script>
 
-    <script; type="text/Javascript">;
+    <script type="text/Javascript">
         var customIcons = {
             restaurant: {
                 icon: 'http://labs.google.com/ridefinder/images/mm_20_blue.png'
