Import Map Page and locations on the map page

--- a/mapPage.html
+++ b/mapPage.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>PHP/MYSQL & Google Maps Example</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf7897Vvv1qEQidZdzbF9zq_lfadpnlJc"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf7897Vvv1qEQidZdzbF9zq_lfadpnlJc"
+            type="text/JavaScript"></script>
 
     <script type="text/Javascript">
         var customIcons = {
