--- a/mapPage.html
+++ b/mapPage.html
@@ -23,6 +23,7 @@
             });
             downloadUrl("index.php", function(data) {
                 var xml = data.responseXML;
+                console.log(xml);
                 var markers = xml.documentElement.getElementsByTagName("marker");
                 for (var i = 0; i < markers.length; i++) {
                     var point = new google.maps.LatLng(
