--- a/mapPage.html
+++ b/mapPage.html
@@ -15,6 +15,7 @@
                 icon: 'http://labs.google.com/ridefinder/images/mm_20_red.png'
             }
         };
+        var infoWindow = new google.maps.InfoWindow;
         function load() {
             var map = new google.maps.Map(document.getElementById("map"), {
                 center: new google.maps.LatLng(47.6145, -122.3418),
@@ -36,10 +37,19 @@
                         position: point,
                         icon: icon.icon
                     });
+                    bindInfoWindow(marker,map,infoWindow,html);
                 }
+            });
+        }
+
+        function bindInfoWindow(marker, map, infoWindow, html){
+            google.maps.event.addListener(marker,'click', function(){
+                infoWindow.setContent(html);
+                infoWindow.open(map, marker);
             });
 
         }
+
         function downloadUrl(url,callback) {
             var request = window.ActiveXObject ?
                     new ActiveXObject('Microsoft.XMLHTTP') :
