Import Map Page and locations on the map page

--- a/mapPage.html
+++ b/mapPage.html
@@ -31,6 +31,8 @@
                             parseFloat(markers[i].getAttribute("lat")),
                             parseFloat(markers[i].getAttribute("lng")));
                     var type = markers[i].getAttribute("type");
+                    var name = markers[i].getAttribute("name");
+                    var html = "<b>" + name + "</b><br/>" + type ;
                     var icon = customIcons[type] || {};
                     var marker = new google.maps.Marker({
                         map: map,
